--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
           <img src="images/search.png" alt="search">
           <input type="text">
         </div>
+        <h1>Strawberries</h1>
+        <h3>Always fills your heart with joy.</h3>
       </div>
 
       <div class="right-column">
