--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,19 @@
           <img src="images/search.png" alt="search">
           <input type="text">
         </div>
-        <h1>Strawberries</h1>
-        <h3>Always fills your heart with joy.</h3>
+        <h1>Straw<span>berries</span></h1>
+        <h3>Always fills your <span>heart with joy</span>.</h3>
+        <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced for those interested. <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, sapiente!</p>
+        <div class="btn">
+          <button type="button" class="primary-btn">Learn More</button>
+          <button type="button">Watch Video</button>
+        </div>
+        <div class="social-icons">
+          <img src="images/twitter.png" alt="twitter">
+          <img src="images/instagram.png" alt="instagram">
+          <img src="images/pinterest.png" alt="pinterest">
+          <img src="images/facebook.png" alt="facebook">
+        </div>
       </div>
 
       <div class="right-column">
